test: add testing infrastructure and unit tests from sachini